# pico-furnace

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic_defines.h  common.h  configure_wifi.sh  dshot_encoder.pio  flash_io.c  flash_io.h  furnace.c  logger.c  logger.h  lwipopts.h  magnetron.c  max31856.c  max31856.h  max31865.h  max318xx.c  max318xx.h  memmap.ld  pid.c  pid.h  pwm.c  shutter.c  shutter.h  spi.c  spi_config.h  spin_coater.c  spin_coater.h  spin_coater_dshot.c  spin_coater_dshot.h  spin_coater_pwm.c  spin_coater_pwm.h  target.h
configs/: furnace  furnace_2422_415  furnace_map  hotplate  no_auto  shutter  spin_coater_dshot
native/: CMakeLists.txt  consteval.c
pcb/furnace/: easyeda.md  pcb_furnace.pcbdoc  schemat_furnace.schdoc
scripts/: build_native.sh  rpiflash.sh
tests/: test_all_targets.sh
